--- a/app/Resources/views/admin/blog/index.html.twig
+++ b/app/Resources/views/admin/blog/index.html.twig
@@ -9,15 +9,15 @@
 
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Posts <small>Sessions</small></h2>
+                        <h2>Posts <small></small></h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                             </li>
                             <li class="">
                                 <a href="{{ path('admin_post_new') }}" class=""><i class="fa fa-plus"></i></a>
                             </li>
-                            <li><a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>
+                            {#<li><a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>#}
                         </ul>
                         <div class="clearfix"></div>
                     </div>
@@ -50,7 +50,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Future Events<small>Sessions</small></h2>
+                        <h2>Future Events<small></small></h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                             </li>
@@ -93,19 +93,19 @@
             <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="x_panel fixed_height_320">
                     <div class="x_title">
-                        <h2>Rooms Booking<small>Sessions</small></h2>
-                        <ul class="nav navbar-left panel_toolbox">
+                        <h2>Rooms Booking<small></small></h2>
+                        <ul class="nav navbar-right panel_toolbox">
                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
                         <h4>Room Type</h4>
+                        {% for room in rooms %}
                         <div class="widget_summary">
                             <div class="w_left w_25">
-                                <span>1.5.2</span>
+                                <span>{{room.name}}</span>
                             </div>
                             <div class="w_center w_55">
                                 <div class="progress">
@@ -115,77 +115,12 @@
                                 </div>
                             </div>
                             <div class="w_right w_20">
-                                <span>123k</span>
+                                <span></span>
                             </div>
                             <div class="clearfix"></div>
                         </div>
-
-                        <div class="widget_summary">
-                            <div class="w_left w_25">
-                                <span>1.5.3</span>
-                            </div>
-                            <div class="w_center w_55">
-                                <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
-                                        <span class="sr-only">60% Complete</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="w_right w_20">
-                                <span>53k</span>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="widget_summary">
-                            <div class="w_left w_25">
-                                <span>1.5.4</span>
-                            </div>
-                            <div class="w_center w_55">
-                                <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
-                                        <span class="sr-only">60% Complete</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="w_right w_20">
-                                <span>23k</span>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="widget_summary">
-                            <div class="w_left w_25">
-                                <span>1.5.5</span>
-                            </div>
-                            <div class="w_center w_55">
-                                <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 5%;">
-                                        <span class="sr-only">60% Complete</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="w_right w_20">
-                                <span>3k</span>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="widget_summary">
-                            <div class="w_left w_25">
-                                <span>0.1.5.6</span>
-                            </div>
-                            <div class="w_center w_55">
-                                <div class="progress">
-                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 2%;">
-                                        <span class="sr-only">60% Complete</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="w_right w_20">
-                                <span>1k</span>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-
-                    </div>
+                        {% endfor %}
+                 </div>
                 </div>
             </div>
              </div>
