--- a/app/Resources/views/admin/blog/index.html.twig
+++ b/app/Resources/views/admin/blog/index.html.twig
@@ -123,6 +123,40 @@
                  </div>
                 </div>
             </div>
+                 
+                 <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="x_panel fixed_height_320">
+                    <div class="x_title">
+                        <h2>Booking<small></small></h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <h4>Room Type</h4>
+                        {% for booking in bookings %}
+                        <div class="widget_summary">
+                            <div class="w_left w_25">
+                                <span>{{room.name}}</span>
+                            </div>
+                            <div class="w_center w_55">
+                                <div class="progress">
+                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 66%;">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w_right w_20">
+                                <span></span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        {% endfor %}
+                 </div>
+                </div>
+            </div>
              </div>
         {% endblock %}
 
