--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -47,7 +47,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
 
-    <body id="{% block body_id %}{% endblock %}">
+    <body id="{% block body_id %}{% endblock %}" ng-app="hotelApp" ng-controller="hotelController">
 
         {% block header %}
             <!-- Site Header -->
@@ -92,14 +92,14 @@
                                 <li><a href="{{ path('hotel_booking') }}">BOOKING</a></li>
                                 <li><a href="{{ path('hotel_blog') }}">BLOG</a></li>
                                 <li><a href="{{ path('hotel_contact') }}">CONTACT</a></li>
-                                 {% if is_granted('ROLE_ADMIN') %}
-                                        <li>
-                                            <a href="{{ path('admin_index') }}">
-                                                <i class="fa fa-lock" aria-hidden="true"></i> {{ 'menu.admin'|trans }}
-                                            </a>
-                                        </li>
-                                    {% endif %}
-                                    {% if app.user %}
+                                    {% if is_granted('ROLE_ADMIN') %}
+                                    <li>
+                                        <a href="{{ path('admin_index') }}">
+                                            <i class="fa fa-lock" aria-hidden="true"></i> {{ 'menu.admin'|trans }}
+                                        </a>
+                                    </li>
+                                {% endif %}
+                                {% if app.user %}
                                     <li>
                                         <a href="{{ path('security_logout') }}">
                                             <i class="fa fa-sign-out" aria-hidden="true"></i> {{ 'menu.logout'|trans }}
@@ -204,6 +204,8 @@
             <script src="/assets/js/booking.form.js"></script>
             <script src="/assets/js/contact.form.js"></script>
             <script src="/assets/js/custom.min.js"></script>
+            <script src="/js/angular.min.js"></script>
+            <script src="/assets/js/moment.js"></script>
 
             <!-- Map Scripts -->
             <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
@@ -211,6 +213,26 @@
 
             <!-- Custom Scripts -->
             <script src="/assets/js/custom.js"></script>
+            <script>
+                    var app = angular.module('hotelApp', []);
+                    app.config(function ($interpolateProvider) {
+                        $interpolateProvider.startSymbol('{[{').endSymbol('}]}');
+                    });
+                    app.controller('hotelController', function ($scope) {
+
+                        $scope.dateDifference = function(firstDate, secondDate)
+                        {
+                            var date1 = new Date(firstDate);
+                            var date2 = new Date(secondDate);
+                            var timeDiff = Math.abs(date2.getTime() - date1.getTime());
+                            var diffDays = Math.ceil(timeDiff / (1000 * 3600 * 24));
+
+                            if(isNaN(diffDays))
+                                diffDays = 0;
+                            return diffDays;
+                        }
+                    });
+            </script>
 
         {% endblock %}
 
