--- a/app/Resources/views/hotel/contact.html.twig
+++ b/app/Resources/views/hotel/contact.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block body_id 'jess_rooms' %}
+{% block body_id 'hotel_contact' %}
 
 {% block main %}
 <!-- Site Main -->
@@ -12,15 +12,14 @@
             <div class="wrapper-inner">
                 <!-- Title -->
                 <h5>GET IN TOUCH WITH US</h5>
-                <h1>Contact Page</h1>
+                <h1>Contact</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
                 <!-- Title End -->
                 <!-- Breadcrumb -->
                 <div class="widget-breadcrumb">
                     <ul>
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">PAGES</a></li>
-                        <li>CONTACT PAGE</li>
+                        <li>CONTACT</li>
                     </ul>
                 </div>
                 <!-- Breadcrumb End -->
@@ -38,14 +37,14 @@
                     <div class="widget-contact-info">
                         <ul>
                             <li>
-                                <h5>THE GRANDIUM HOTEL</h5>
+                                <h5>JESS HOTEL</h5>
                                 <ul>
                                     <li>The Grandium Hotel 41-49 Longridge Road, Earls Court, London</li>
-                                    <li>Phone: +1-800-123-45-67  Fax: +1-800-123-45-67</li>
-                                    <li><a href="mailto:info@thegrandiumhotel.com">info@thegrandiumhotel.com</a></li>
+                                    <li>Phone: +228-2250-43-17</li>
+                                    <li><a href="mailto:info@hoteljesshouse.com">info@hoteljesshouse.com</a></li>
                                 </ul>
                             </li>
-                            <li>
+                            {#<li>
                                 <h5>RESERVATION</h5>
                                 <ul>
                                     <li>Mr. Michael Feldstein - Director of Reservation</li>
@@ -60,7 +59,7 @@
                                     <li>Phone: +1-800-123-45-67  Fax: +1-800-123-45-67</li>
                                     <li><a href="mailto:public.relations@thegrandiumhotel.com">public.relations@thegrandiumhotel.com</a></li>
                                 </ul>
-                            </li>
+                            </li>#}
                         </ul>
                     </div>
                     <!-- Contact Info End -->
