--- a/app/Resources/views/hotel/about-us.html.twig
+++ b/app/Resources/views/hotel/about-us.html.twig
@@ -12,15 +12,14 @@
             <div class="wrapper-inner">
                 <!-- Title -->
                 <h5>YOUR PERFECT ESCAPE</h5>
-                <h1>About Page</h1>
+                <h1>About Us</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
                 <!-- Title End -->
                 <!-- Breadcrumb -->
                 <div class="widget-breadcrumb">
                     <ul>
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">PAGES</a></li>
-                        <li>ABOUT PAGE</li>
+                        <li>ABOUT US</li>
                     </ul>
                 </div>
                 <!-- Breadcrumb End -->
@@ -36,7 +35,7 @@
                 <div class="widget-inner">
                     <div class="row">
                         <div class="col-md-6">
-                            <h5>ABOUT THE GRANDIUM</h5>
+                            <h5>ABOUT JESS HOTEL</h5>
                             <h2>Your Perfect Escape</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
                             <p>Nulla vel nisi felis. Vivamus vitae ex a magna cursus pretium. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque nec ante euismod, posuere turpis facilisis, fringilla odio. Nunc eget purus at dolor venenatis cursus et non arcu. Praesent rutrum condimentum risus, sed interdum purus euismod eget.</p>
@@ -55,13 +54,13 @@
             <div class="wrapper-inner">
                 <div class="widget-inner">
                     <div class="widget-item">
-                        <h5>ABOUT THE GRANDIUM</h5>
+                        <h5>ABOUT JESS HOTEL</h5>
                         <h2>Our Philosophy</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
                         <p>Nulla vel nisi felis. Vivamus vitae ex a magna cursus pretium. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque nec ante euismod, posuere turpis facilisis, fringilla odio. Nunc eget purus at dolor venenatis cursus et non arcu.</p>
                     </div>
                     <div class="widget-item">
-                        <h5>ABOUT THE GRANDIUM</h5>
+                        <h5>ABOUT JESS HOTEL</h5>
                         <h2>Our Mission</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
                         <p>Nulla vel nisi felis. Vivamus vitae ex a magna cursus pretium. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque nec ante euismod, posuere turpis facilisis, fringilla odio. Nunc eget purus at dolor venenatis cursus et non arcu.</p>
@@ -235,7 +234,7 @@
                 <!-- Features Title -->
                 <div class="widget-title">
                     <h5>KEY FEATURES</h5>
-                    <h2>Explore The Grandium</h2>
+                    <h2>Explore Jess Hotel</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem.</p>
                 </div>
                 <!-- Features Title End -->
@@ -258,7 +257,7 @@
                     </div>
                     <div class="features-item">
                         <div class="item-inner" data-background="/assets/img/ico-wifi.png">
-                            <h5>WI-FI SERVICE</h5>
+                            <h5>WI-FI</h5>
                         </div>
                     </div>
                     <div class="features-item">
@@ -267,18 +266,18 @@
                         </div>
                     </div>
                     <div class="features-item">
-                        <div class="item-inner" data-background="/assets/img/ico-coffee.png">
-                            <h5>BREAKFAST</h5>
+                        <div class="item-inner" data-background="/assets/img/ico-airconditioning.png">
+                            <h5>AIR CONDITIONNER</h5>
                         </div>
                     </div>
                     <div class="features-item">
-                        <div class="item-inner" data-background="/assets/img/ico-roomservice.png">
-                            <h5>ROOM SERVICE</h5>
+                        <div class="item-inner" data-background="/assets/img/ico-tv.png">
+                            <h5>TV</h5>
                         </div>
                     </div>
                     <div class="features-item">
-                        <div class="item-inner" data-background="/assets/img/ico-food.png">
-                            <h5>BISTRO &amp; BAR</h5>
+                        <div class="item-inner" data-background="/assets/img/ico-car.png">
+                            <h5>AIRPORT SHUTTLE</h5>
                         </div>
                     </div>
                     <div class="features-item">
