--- a/app/Resources/views/hotel/booking.html.twig
+++ b/app/Resources/views/hotel/booking.html.twig
@@ -12,15 +12,14 @@
                     <div class="wrapper-inner">
                         <!-- Title -->
                         <h5>STAY THE GRANDIUM</h5>
-                        <h1>Booking Page</h1>
+                        <h1>Booking</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget commodo orci. Integer varius nibh eu mattis porta. Pellentesque dictum sem eget cursus semper. Nullam quis blandit lorem. Morbi blandit orci urna, eu congue magna faucibus at. In bibendum in mauris nec ultrices. Nunc et magna velit.</p>
                         <!-- Title Emd -->
                         <!-- Breadcrumb -->
                         <div class="widget-breadcrumb">
                             <ul>
-                                <li><a href="#">HOME</a></li>
-                                <li><a href="#">PAGES</a></li>
-                                <li>BOOKING PAGE</li>
+                                <li><a href="{{path('hotel_index')}}">HOME</a></li>
+                                <li>BOOKING</li>
                             </ul>
                         </div>
                         <!-- Breadcrumb End -->
